--- a/s18/Makefile
+++ b/s18/Makefile
@@ -31,21 +31,21 @@ OBJECTS = $(patsubst $(SRCDIR)/%.cpp, $(OBJDIR)/%.o, $(SOURCES))
 # Compiler options
 CXX ?= /usr/bin/g++
 CPPFLAGS = $(addprefix -I, $(HEADDIR)) -isystem../sdsl/build/include -MMD -MP
-CFLAGS = -O0 -g -Wall -std=gnu++11 -Weffc++ -Wextra \
+CFLAGS = -O9 -std=gnu++11 -Wall -Weffc++ -Wextra \
 	-Wcast-align -Wcast-qual -Wchar-subscripts -Wcomment -Wconversion \
 	-Wdisabled-optimization -Wfloat-equal -Wformat -Wformat=2 \
 	-Wformat-nonliteral -Wformat-security -Wformat-y2k -Wimport \
 	-Winit-self -Winvalid-pch -Wunsafe-loop-optimizations \
 	-Wlong-long -Wmissing-braces -Wmissing-field-initializers \
 	-Wmissing-format-attribute -Wmissing-include-dirs -Wmissing-noreturn \
-	-Wpacked -Wpadded -Wparentheses -Wpointer-arith -Wredundant-decls \
+	-Wpacked -Wno-padded -Wparentheses -Wpointer-arith -Wredundant-decls \
 	-Wreturn-type -Wsequence-point -Wshadow -Wsign-compare \
 	-Wstack-protector -Wstrict-aliasing -Wstrict-aliasing=2 -Wswitch \
 	-Wswitch-default -Wswitch-enum -Wtrigraphs -Wuninitialized \
 	-Wunknown-pragmas -Wunreachable-code -Wunused -Wunused-function \
 	-Wunused-label -Wunused-parameter -Wunused-value -Wunused-variable \
 	-Wvariadic-macros -Wvolatile-register-var -Wwrite-strings \
-	-mtune=native -Winline
+	-mtune=native
 LDFLAGS = -L../sdsl/build/lib
 LDLIBS = -lsdsl -ldivsufsort -ldivsufsort64
 DEBUG =
