--- a/perf/Makefile
+++ b/perf/Makefile
@@ -31,7 +31,8 @@ OBJECTS = $(patsubst $(SRCDIR)/%.cpp, $(OBJDIR)/%.o, $(SOURCES))
 # Compiler options
 CXX ?= /usr/bin/g++
 CPPFLAGS = $(addprefix -I, $(HEADDIR)) -isystem../sdsl/build/include \
-	-I../s18/head -isystem../benchmark/include -MMD -MP
+	-I../s18/head -isystem../benchmark/include -MMD -MP \
+	-isystem../s9/include/sdsl
 CFLAGS = -O9 -std=gnu++11 -Wall -Weffc++ -Wextra \
 	-Wcast-align -Wcast-qual -Wchar-subscripts -Wcomment -Wconversion \
 	-Wdisabled-optimization -Wfloat-equal -Wformat -Wformat=2 \
@@ -46,7 +47,7 @@ CFLAGS = -O9 -std=gnu++11 -Wall -Weffc++ -Wextra \
 	-Wunknown-pragmas -Wunreachable-code -Wunused -Wunused-function \
 	-Wunused-label -Wunused-parameter -Wunused-value -Wunused-variable \
 	-Wvariadic-macros -Wvolatile-register-var -Wwrite-strings \
-	-mtune=native -DTEST_S18
+	-mtune=native -DTEST_S18 -DS9_DEBUG
 LDFLAGS = -L../sdsl/build/lib -L../benchmark/build/src
 LDLIBS = -lsdsl -ldivsufsort -ldivsufsort64 -lpthread -lbenchmark
 DEBUG = -g
