--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,10 @@ matrix:
                       - g++-7
           env: CC=gcc-7 CXX=g++-7 STDLIB=libstdc++
 
+        - os: osx
+          osx_image: xcode10.1
+          env: CC=gcc-7 CXX=g++-7 STDLIB=libstdc++
+
 install:
     - git clone --depth=1 https://github.com/simongog/sdsl-lite ${TRAVIS_BUILD_DIR}/sdsl/src
     - cd ${TRAVIS_BUILD_DIR}/sdsl/src
