speecify bionic ditribution for linux ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ sudo: false
 matrix:
     include:
         - os: linux
+          dist: bionic
           compiler: gcc-7
           addons: &gcc7
               apt:
